fix gap top header

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ a {
 
 .top-header-sub {
     display: flex;
-    justify-content: space-between;
+    justify-content:center;
     align-items: center;
     gap: var(--item-gap);
 }
